--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import './components/fonts.css';
+
+body {
+  font-family: 'Noto Sans', sans-serif;
+}
 .App {
   height: 100vh;
   background-color: #f5f5f5;
