--- a/src/components/CompanyForm.css
+++ b/src/components/CompanyForm.css
@@ -63,13 +63,13 @@
   width: 100%;
 }
 
-.dropdown-icon-svg {
+.status-icon-svg {
   position: absolute;
   right: 16px;
   top: 50%;
   transform: translateY(-50%);
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   pointer-events: none;
 }
 
@@ -78,24 +78,3 @@
   width: 100%;
 }
 
-.status-star-12 {
-  position: absolute;
-  right: 50px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 20px;
-  height: 20px;
-  background: #4caf50;
-  clip-path: polygon(
-    50% 0%, 
-    65% 25%, 
-    98% 35%, 
-    78% 57%, 
-    85% 91%, 
-    50% 78%, 
-    15% 91%, 
-    22% 57%, 
-    2% 35%, 
-    35% 25%
-  );
-} 
