Update HRMS application with complete forms and components

--- a/src/components/CompanyForm.css
+++ b/src/components/CompanyForm.css
@@ -41,6 +41,41 @@
   width: 100%;
 }
 
+.input-with-icon {
+  position: relative;
+  width: 100%;
+}
+
+.input-with-icon .form-input.with-separator {
+  padding-right: 60px;
+}
+
+.select-wrapper .form-select.with-separator,
+.status-wrapper .form-select.with-separator {
+  padding-right: 60px;
+}
+
+.input-separator {
+  position: absolute;
+  right: 42px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 24px;
+  background-color: #ddd;
+  pointer-events: none;
+}
+
+.calendar-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #4a90e2;
+  font-size: 16px;
+  pointer-events: none;
+}
+
 .form-input:focus,
 .form-select:focus {
   outline: none;
@@ -61,6 +96,16 @@
 .select-wrapper {
   position: relative;
   width: 100%;
+}
+
+.dropdown-icon-svg {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  pointer-events: none;
 }
 
 .status-icon-svg {
